--- a/components/Navigation/Main.module.css
+++ b/components/Navigation/Main.module.css
@@ -9,12 +9,20 @@
 }
 
 .header {
-    width: 1280px;
+    width: 100%; 
     height: 56px;
-    position: fixed;
-    background-color: white;
-    z-index: 10;
+    position: fixed; 
+    top: 0;
+    left: 0; 
+    background-color: rgb(255, 255, 255);
+    display: flex; 
+    justify-content: space-between;
+    align-items: center; 
+    padding: 0 16px; 
+    z-index: 1000; 
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15); 
 }
+
 
 .logo{
     width: 90px;
@@ -36,26 +44,3 @@
     z-index: 2;
 }
 
-.userExitContaier{
-
-}
-
-.userLogo{
-
-}
-
-.line{
-
-}
-
-.username{
-
-}
-
-.exit{
-
-}
-
-.logout{
-
-}
