--- a/components/Navigation/Navigation.module.css
+++ b/components/Navigation/Navigation.module.css
@@ -10,7 +10,8 @@
         justify-content: space-between;
         align-items: center; 
         padding: 0 16px; 
-        z-index: 10; 
+        z-index: 1000; 
+        box-shadow:  0px 4px 6px rgba(0, 0, 0, 0.15);
     }
 
     .logo {
@@ -24,8 +25,17 @@
     }
 
 .userInfo {
+    position: absolute;
+    width: 170px;
+    height: 36px;
+    top: 10px;
+    left: 1094px;
     display: flex;
-    align-items: center; 
+    align-items: center;
+    justify-content: space-between;
+    background-color: rgba(245, 246, 250, 1);
+    padding: 5px 10px;
+    border-radius: 8px;
 }
 
 .userLogo {
@@ -38,6 +48,7 @@
     display: flex; 
     align-items: center; 
     justify-content: center;
+    border-radius: 50%;
 }
 
 .userName {
@@ -60,4 +71,8 @@
     text-decoration: underline;
     text-decoration-style: solid;
     cursor: pointer; 
+}
+
+.logout:hover {
+    color: darkred;
 }
