--- a/components/Navigation/Background.module.css
+++ b/components/Navigation/Background.module.css
@@ -34,27 +34,27 @@ body {
     justify-content: center;
     border-bottom-left-radius: 20%;
     z-index: 1;
+    transition: top 1s ease-in-out;
 }
 
 .title {
     width: 377px;
     height: 139px;
-    color: black;
     font-size: 102px;
     font-weight: 900;
     position: absolute;
     top: 264px; 
     left: 229px; 
-    z-index: 2;
+    color: #000000;
+    text-shadow: 2px 2px 4px #000000;
+    text-transform: uppercase; 
+    letter-spacing: 2px;
+    z-index: 1000;
 }
 
 .moveDown .title {
-    display: none; 
-}
-
-.hidden {
     opacity: 0; 
-    pointer-events: none; 
+    pointer-events: none;
 }
 
 .cabbageBottom {
